# bartleby

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  ArchiveWriter_8cpp.html  BUILD.bazel  Bartleby-c_2Bartleby_8h.html  Bartleby-c_2Bartleby_8h_source.html  Bartleby-c_8cpp.html  Bartleby_2Bartleby_8h.html  Bartleby_2Bartleby_8h_source.html  Bartleby_8h.html  Bartleby_8h__incl.md5  Bartleby_8h_source.html  CMakeLists.txt  Cargo.toml  Doxyfile  Error_8cpp.html  Error_8cpp__incl.map  Error_8cpp__incl.md5  Error_8h.html  Error_8h__dep__incl.map  Error_8h__incl.map  Error_8h__incl.md5  Error_8h_source.html  Export_8h.html  Export_8h_source.html  README.md  Symbol_8cpp.html  Symbol_8cpp__incl.map  Symbol_8cpp__incl.md5  Symbol_8h.html  Symbol_8h__dep__incl.md5  Symbol_8h__incl.map  Symbol_8h_source.html  Tests_8cpp.html  WORKSPACE.bazel  annotated.html  api__1_8h_source.html  api__2_8h_source.html  (+96 more)
.circleci/: Dockerfile  config.yml
bartleby/: CMakeLists.txt  deps.bzl  repositories.bzl
bartleby/include/Bartleby/: BUILD.bazel  Bartleby.h  Symbol.h
bartleby/include/Bartleby-c/: BUILD.bazel  Bartleby.h
bartleby/lib/: CMakeLists.txt
bartleby/lib/Bartleby/: ArchiveWriter.cpp  BUILD.bazel  Bartleby-c.cpp  Bartleby.cpp  CMakeLists.txt  Error.cpp  Error.h  Export.h  Symbol.cpp
bartleby/tests/Bartleby/: BUILD.bazel  Tests.cpp
bartleby/tests/Bartleby/testdata/: BUILD.bazel
bartleby/tests/Bartleby/testdata/yaml/ELF/: simple_x86_64.yaml  symbols_visibility.yaml  uninit_symbol_in_BSS.yaml
bartleby/tests/Bartleby/testdata/yaml/MachO/: arm64.yaml  fat_macho.yaml
bartleby/tools/: CMakeLists.txt
bartleby/tools/Bartleby/: BUILD.bazel  Bartleby.cpp  CMakeLists.txt
bazel/: fetch.bzl
docs/: DoxygenLayout.xml  bazel-integration.dox  command-guide.dox  getting-started.dox  mainpage.dox  rules.md  why-not-objcopy.dox
examples/bazel/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  api_1.c  api_1.h  api_2.c  api_2.h  external_dep.c  external_dep.h
html/: Bartleby_8h__dep__incl.map  Bartleby_8h__dep__incl.md5  Bartleby_8h__incl.map  Bartleby_8h_source.html  Error_8cpp.html  Error_8h__dep__incl.md5  Error_8h_source.html  Export_8h.html  Export_8h__dep__incl.map  Export_8h__dep__incl.md5  Export_8h_source.html  Symbol_8h__dep__incl.map  Symbol_8h__incl.md5  Tests_8cpp.html  Tests_8cpp__incl.map  Tests_8cpp__incl.md5  classsaq_1_1bartleby_1_1Bartleby-members.html  classsaq_1_1bartleby_1_1Bartleby_1_1ArchiveBuilder-members.html  classsaq_1_1bartleby_1_1Bartleby_1_1ArchiveBuilder__coll__graph.md5  classsaq_1_1bartleby_1_1Error-members.html  classsaq_1_1bartleby_1_1Error.html  classsaq_1_1bartleby_1_1Error__inherit__graph.md5  dir_000003_000001.html  dir_000004_000001.html  dir_000007_000001.html  dir_2c7f986a27add7b8c2b8eda747f04a72_dep.map  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4dd2adec81f57357cf49551c1a73e96c.html  dir_6b4e5e04e074950b7ae25d124bee5399_dep.map  dir_6b4e5e04e074950b7ae25d124bee5399_dep.md5  dir_83bc2019cd753e1246e5b307302cf5c2_dep.map  dir_83bc2019cd753e1246e5b307302cf5c2_dep.md5  dir_8a8d14989ab66196bba9fe36fa4b38cd_dep.map  dir_bc1761ea0f4d566ad231b0d267db48b3.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d6ba8622ef211ee1e34113afcaf25d7f_dep.map  dir_d6ba8622ef211ee1e34113afcaf25d7f_dep.md5  dir_def10eacec6ab841f45e6ac0ee953814_dep.map  dir_def10eacec6ab841f45e6ac0ee953814_dep.md5  dir_e5a8a0704cab9a24ec13fcb7bfcfa4df_dep.map  (+18 more)
html/search/: all_0.js  all_8.js  all_a.js  all_c.js  classes_2.js  classes_4.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_b.js  pages_0.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_4.js  variables_7.js
private/: BUILD.bazel  utils.bzl
search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+20 more)
tests/bazel_integration/: WORKSPACE.bazel
