load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

alias(
    name = "bartleby",
    actual = "//bartleby/lib/Bartleby:bartleby",
    visibility = ["//visibility:public"],
)

stardoc(
    name = "bartleby-docs",
    out = "docs/rules.md",
    input = "rules.bzl",
    deps = [
        "//private:bartleby-rules",
    ],
)
