[package]
name = "bartleby"
version = "0.2.2"
authors = ["thb-sb <thomas@sandboxaq.com>", "SandboxAQ"]
edition = "2021"
description = "A symbol renaming toolkit, based on LLVM"
documentation = "https://doc.rs/bartleby"
readme = "README.md"
homepage = "https://sandbox-quantum.github.io/bartleby/"
repository = "https://github.com/sandbox-quantum/bartleby"
license = "Apache-2.0"
keywords = [
    "elf",
    "mach-o",
    "object",
    "symbol",
    "llvm"
]
categories = ["development-tools"]

[lib]
path = "lib.rs"

[build-dependencies]
cmake = "0.1.50"
