workspace(name = "com_sandboxquantum_bartleby")

load("//bartleby:repositories.bzl", "bartleby_repositories")

bartleby_repositories()

load("//bartleby:deps.bzl", "bartleby_deps")

bartleby_deps()

load("//bazel:fetch.bzl", "fetch_archives")

fetch_archives()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()
