load("@com_sandboxquantum_bartleby//:rules.bzl", "bartleby")

cc_library(
    name = "api_1",
    srcs = ["api_1.c"],
    hdrs = ["api_1.h"],
    copts = [
        "-fvisibility=hidden",
    ],
    deps = [
        ":external_dep",
    ],
)

cc_library(
    name = "api_2",
    srcs = ["api_2.c"],
    hdrs = ["api_2.h"],
    copts = [
        "-fvisibility=hidden",
    ],
    deps = [
        ":api_1",
        ":external_dep",
    ],
)

cc_library(
    name = "external_dep",
    srcs = ["external_dep.c"],
    hdrs = ["external_dep.h"],
    copts = [
        "-fvisibility=hidden",
    ],
)

bartleby(
    name = "external_dep_versioned",
    srcs = [":external_dep"],
    prefix = "__private_1.2.3_",
)
