load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_sandboxquantum_bartleby",
    sha256 = "__SHA256__",
    url = "file:///tmp/archive.tar.gz",
)

load("@com_sandboxquantum_bartleby//bartleby:repositories.bzl", "bartleby_repositories")

bartleby_repositories()

load("@com_sandboxquantum_bartleby//bartleby:deps.bzl", "bartleby_deps")

bartleby_deps()
