cc_library(
    name = "export",
    hdrs = ["Export.h"],
    strip_include_prefix = "/bartleby/lib/",
)

cc_library(
    name = "archive_writer",
    srcs = ["ArchiveWriter.cpp"],
    copts = [
        "-std=c++17",
    ],
    deps = [
        ":error",
        ":export",
        "//bartleby/include/Bartleby:bartleby",
        "@llvm-project//llvm:ObjCopy",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "bartleby",
    srcs = ["Bartleby.cpp"],
    copts = [
        "-std=c++17",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":archive_writer",
        ":error",
        ":export",
        ":symbol",
        "//bartleby/include/Bartleby:bartleby",
        "//bartleby/include/Bartleby:symbol",
        "@llvm-project//llvm:ObjCopy",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "error",
    srcs = ["Error.cpp"],
    hdrs = ["Error.h"],
    copts = [
        "-std=c++17",
    ],
    strip_include_prefix = "/bartleby/lib/",
    deps = [
        "//bartleby/include/Bartleby:bartleby",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:TargetParser",
    ],
)

cc_library(
    name = "symbol",
    srcs = ["Symbol.cpp"],
    copts = [
        "-std=c++17",
    ],
    deps = [
        ":export",
        "//bartleby/include/Bartleby:symbol",
        "@llvm-project//llvm:Object",
    ],
)

cc_library(
    name = "bartleby-c",
    srcs = ["Bartleby-c.cpp"],
    copts = [
        "-std=c++17",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bartleby",
        "//bartleby/include/Bartleby:bartleby",
        "//bartleby/include/Bartleby-c:bartleby",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:Support",
    ],
)
