cc_test(
    name = "test",
    srcs = ["Tests.cpp"],
    copts = [
        "--std=c++17",
    ],
    data = [
        "//bartleby/tests/Bartleby/testdata",
    ],
    linkstatic = True,
    deps = [
        "//bartleby/lib/Bartleby:bartleby",
        "@bartleby-llvm-project//llvm:ObjectYAML",
        "@com_google_googletest//:gtest_main",
    ],
)
