cc_test(
    name = "test",
    srcs = ["Tests.cpp"],
    copts = [
        "--std=c++17",
    ],
    data = [
        "//bartleby/tests/Bartleby/testdata",
    ],
    linkstatic = True,
    deps = [
        "//bartleby/lib/Bartleby:bartleby",
        "//bartleby/lib/Bartleby:bartleby-c",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//llvm:ObjectYAML",
    ],
)
