cc_test(
    name = "test",
    timeout = "short",
    srcs = ["Tests.cpp"],
    copts = [
        "--std=c++17",
    ],
    data = [
        "//bartleby/tests/Bartleby/testdata",
    ],
    linkstatic = True,
    deps = [
        "//bartleby/include/Bartleby:bartleby",
        "//bartleby/include/Bartleby:symbol",
        "//bartleby/include/Bartleby-c:bartleby",
        "//bartleby/lib/Bartleby:bartleby",
        "//bartleby/lib/Bartleby:bartleby-c",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:ObjectYAML",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:TargetParser",
    ],
)
