cc_binary(
    name = "bartleby",
    srcs = ["Bartleby.cpp"],
    copts = [
        "-std=c++17",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bartleby/include/Bartleby:bartleby",
        "//bartleby/lib/Bartleby:bartleby",
        "@llvm-project//llvm:Support",
    ],
)
